2000-05-23  Mark A. Hershberger  <mah@everybody.org>

	* lib/Image/Grab.pm (get_new): added a probably buggy version for
	1.0
	
	
2000-04-09  Mark A. Hershberger  <mah@everybody.org>

	* lib/: Moved files under this hierarchy.
	
	* lib/Image/Grab.pod: Seperated POD from PM.  Fleshed out the docs
	and rearranged them according to Tom Metro's suggestions.  Filled
	in spec on grab_new, changed realm to auth and a couple of other
	changes to encourage me to actually do them.

	* README.pod: Added the file.  Removed duplication of man
	page.
	

1999-11-08  Mark A. Hershberger  <mah@everybody.org>

	* README: noted search_url.

	* Grab.pm: Clarified docs on basis of Tom Metro (tmetro@vl.com)
	suggestions.  Added search_url and removed overloading of regex
	method.  Added ability to grab to accept named params.

	* t/direct_grab.t: added test for named param grab.

1999-06-12  Mark A. Hershberger  <mah@everybody.org>

	* README: Noted do_posix.

	* Grab.pm: Began work on debug method.  Found bug in strftime.
	Changed behavior of POSIX date substitution.  Added do_posix
	method.
	
1999-06-09  Mark A. Hershberger  <mah@everybody.org>

	* README: Added install and test instructions.

	* t/comics.t: Split out cookie-dependent tests.

	* t/cookies.t: Created for cookie dependent tests.

1999-05-18  Mark A. Hershberger  <mah@everybody.org>

	* Grab/RequestAgent.pm (new): Updated & simplified proxy code

	* Grab/RequestAgent.pm (register_realm): Fixed code so it actually
	works.

	* Grab/RequestAgent.pm (get_basic_credentials): Fixed code.

	* Grab/RequestAgent.pm: Removed some crufty functions.
	
	* Grab.pm (realm): Fixed realm problem.  Interface Change!

1999-02-19  Mark A. Hershberger  <mah@everybody.org>

	* t/easy.t, t/md5.t, t/type.t: Removed fork dependency and set it
	to a "live" site.

	* Grab/RequestAgent.pm (new): Added code to recognize the proxy
	variables for firewalls.

	* t/TestDaemon.pm: Removed to fix fork dependency.
	